fixing image bug

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,7 +13,7 @@ import Footer from '../components/Footer.astro'
 		<p>welcome to our blog!</p>
 
         <div id="blogpage">
-            <Card title="Zero" blurb="a first post!" image=url("/src/assets/IMG_5399.jpg") slug="blog/zero" ></Card>
+            <Card title="Zero" blurb="a first post!" image=url("/IMG_5399.jpg") slug="blog/zero" ></Card>
         </div>
 
 		<Footer />
