adding basic calendar, resources

--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -8,8 +8,33 @@ import Footer from '../components/Footer.astro'
 <Basic>
 	<Navbar />
 	<div id="idx-main">
-
-		<p>coming soon!</p>
+		<center>
+		<table border="1" width="90%">
+			<thead>
+				<tr>
+					<th>Week</th>
+					<th>Date</th>
+					<th>Lecture</th>
+					<th>Homework</th>
+					<th>Fun</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td rowspan="2">1</td>
+					<td>Feb 11</td>
+					<td>Lecture 1: Data Science Intro + Calculus<br/>
+					<a href="https://docs.google.com/presentation/d/1oAh7GL7_W9ekIZSCu53XYsYzFWP2KQpGKx_gnlVwu64/edit?usp=sharing">Slides</a></td>
+					<td rowspan="2">HW 1 (Coming Soon!)</td>
+					<td rowspan="2"><a href="https://open.spotify.com/playlist/1dkapnRFuGcz43iNGrQAGy?si=8674dec1c2e04343">Playlist</a></td>
+				</tr>
+				<tr>
+					<td>Feb 12</td>
+					<td>Lab 1: Linear Algebra and NumPy</td>
+				</tr>
+			</tbody>
+		</table>
+		</center>
 
 		<Footer />
 	</div>
