--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -9,7 +9,9 @@ import Footer from '../components/Footer.astro'
 	<Navbar />
 	<div id="idx-main">
 
-		<p>coming soon!</p>
+		<ul>
+			<li><a href="https://docs.google.com/document/d/1ESGMpTxviT234Ht_-GrvRLNxU-k9G6VnAkM1BitrMXQ/edit?tab=t.0#heading=h.cnlcq0cjrvje">DF Notes Doc</a></li>
+		</ul>
 
 		<Footer />
 	</div>
