--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -25,12 +25,21 @@ import Footer from '../components/Footer.astro'
 					<td>Feb 11</td>
 					<td>Lecture 1: Data Science Intro + Calculus<br/>
 					<a href="https://docs.google.com/presentation/d/1oAh7GL7_W9ekIZSCu53XYsYzFWP2KQpGKx_gnlVwu64/edit?usp=sharing">Slides</a></td>
-					<td rowspan="2">HW 1 (Coming Soon!)</td>
+					<td rowspan="2"><a href="/hw1.zip">HW 1</a></td>
 					<td rowspan="2"><a href="https://open.spotify.com/playlist/1dkapnRFuGcz43iNGrQAGy?si=8674dec1c2e04343">Playlist</a></td>
 				</tr>
 				<tr>
 					<td>Feb 12</td>
 					<td>Lab 1: Linear Algebra and NumPy</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Feb 18</td>
+					<td>Lecture 2: Probability and Random Variables<br/>
+					<a href="https://docs.google.com/presentation/d/1r3i4z0j89AYJ5_GsKUJ23xhOuMc55PT9rHvobB34JNg/edit#slide=id.g337155fa6fe_1_85">Slides</a><br/>
+					<a href="https://colab.research.google.com/drive/1syCsLziErDs8uYXHHVuu_X0dl0cCSrGq#scrollTo=iicZByLek1RM">Notebook</a></td>
+					<td rowspan="2">HW 2</td>
+					<td rowspan="2"></td>
 				</tr>
 			</tbody>
 		</table>
