--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -33,13 +33,17 @@ import Footer from '../components/Footer.astro'
 					<td>Lab 1: Linear Algebra and NumPy</td>
 				</tr>
 				<tr>
-					<td>2</td>
+					<td rowspan="2">2</td>
 					<td>Feb 18</td>
 					<td>Lecture 2: Probability and Random Variables<br/>
 					<a href="https://docs.google.com/presentation/d/1r3i4z0j89AYJ5_GsKUJ23xhOuMc55PT9rHvobB34JNg/edit#slide=id.g337155fa6fe_1_85">Slides</a><br/>
 					<a href="https://colab.research.google.com/drive/1syCsLziErDs8uYXHHVuu_X0dl0cCSrGq#scrollTo=iicZByLek1RM">Notebook</a></td>
 					<td rowspan="2">HW 2</td>
 					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Feb 19</td>
+					<td>Lab 2: Come today and see! :-D</td>
 				</tr>
 			</tbody>
 		</table>
