--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -38,7 +38,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 2: Probability and Random Variables<br/>
 					<a href="https://docs.google.com/presentation/d/1r3i4z0j89AYJ5_GsKUJ23xhOuMc55PT9rHvobB34JNg/edit#slide=id.g337155fa6fe_1_85">Slides</a><br/>
 					<a href="https://colab.research.google.com/drive/1syCsLziErDs8uYXHHVuu_X0dl0cCSrGq#scrollTo=iicZByLek1RM">Notebook</a></td>
-					<td rowspan="2">HW 2</td>
+					<td rowspan="2"><a href="/hw2.zip">HW 2</a></td>
 					<td rowspan="2"></td>
 				</tr>
 				<tr>
