--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -49,13 +49,13 @@ import Footer from '../components/Footer.astro'
 					<td rowspan="2">3</td>
 					<td>Feb 25</td>
 					<td>Lecture 3: EDA<br/>
-					<a href="https://docs.google.com/presentation/d/1r3i4z0j89AYJ5_GsKUJ23xhOuMc55PT9rHvobB34JNg/edit#slide=id.g337155fa6fe_1_85">Slides</a></td>
+					<a href="https://docs.google.com/presentation/d/1nHzMrze5wL2ZBdEjHYKvlfUjJP0Kg38wm_lsL4DfLwE/edit#slide=id.g339b5be8024_0_0">Slides</a></td>
 					<td rowspan="2"><a href="/hw3.zip">HW 3 (Coming Soon)</a></td>
 					<td rowspan="2"></td>
 				</tr>
 				<tr>
 					<td>Feb 26</td>
-					<td>Lab 3: <a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Teleport!</a> :-D</td>
+					<td>Proposal Doc: <a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Teleport!</a> :-D</td>
 				</tr>
 			</tbody>
 		</table>
