updating calendar and lab

--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -55,7 +55,8 @@ import Footer from '../components/Footer.astro'
 				</tr>
 				<tr>
 					<td>Feb 26</td>
-					<td>Proposal Doc: <a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Teleport!</a> :-D</td>
+					<td><a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Project Proposal Doc!</a><br/>
+					<a href="/lab3.ipynb">Project Proposal Doc!</a> :-D</td>
 				</tr>
 			</tbody>
 		</table>
