--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -56,7 +56,7 @@ import Footer from '../components/Footer.astro'
 				<tr>
 					<td>Feb 26</td>
 					<td><a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Project Proposal Doc!</a><br/>
-					<a href="/lab3.ipynb">Project Proposal Doc!</a> :-D</td>
+					<a href="/lab3.ipynb">Lab Notebook</a></td>
 				</tr>
 			</tbody>
 		</table>
