--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -58,6 +58,18 @@ import Footer from '../components/Footer.astro'
 					<td><a href="https://docs.google.com/document/d/1LycEPdOh-P757pangvuFGbC7OEuvoMUbfQkyVSk21gw/edit?tab=t.0">Project Proposal Doc!</a><br/>
 					<a href="/lab3.ipynb">Lab Notebook</a></td>
 				</tr>
+				<tr>
+					<td rowspan="2">3</td>
+					<td>Mar 4</td>
+					<td>Lecture 4: Modeling<br/>
+					<a href="https://docs.google.com/presentation/d/19pYxypi9JTgSFPIgBuvqlWbopyCRlTxR-qt3wIjJAYw/edit#slide=id.g33c2b5cb2c1_0_66">Slides</a></td>
+					<td rowspan="2"><a href="/hw4.zip">HW 4 (Coming Soon)</a></td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Mar 5</td>
+					<a href="/lab4.ipynb">Lab Notebook</a></td>
+				</tr>
 			</tbody>
 		</table>
 		</center>
