--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -59,7 +59,7 @@ import Footer from '../components/Footer.astro'
 					<a href="/lab3.ipynb">Lab Notebook</a></td>
 				</tr>
 				<tr>
-					<td rowspan="2">3</td>
+					<td rowspan="2">4</td>
 					<td>Mar 4</td>
 					<td>Lecture 4: Modeling<br/>
 					<a href="https://docs.google.com/presentation/d/19pYxypi9JTgSFPIgBuvqlWbopyCRlTxR-qt3wIjJAYw/edit#slide=id.g33c2b5cb2c1_0_66">Slides</a></td>
@@ -68,7 +68,7 @@ import Footer from '../components/Footer.astro'
 				</tr>
 				<tr>
 					<td>Mar 5</td>
-					<a href="/lab4.ipynb">Lab Notebook</a></td>
+					<td><a href="/lab4.ipynb">Lab Notebook</a></td>
 				</tr>
 			</tbody>
 		</table>
