--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -50,7 +50,7 @@ import Footer from '../components/Footer.astro'
 					<td>Feb 25</td>
 					<td>Lecture 3: EDA<br/>
 					<a href="https://docs.google.com/presentation/d/1nHzMrze5wL2ZBdEjHYKvlfUjJP0Kg38wm_lsL4DfLwE/edit#slide=id.g339b5be8024_0_0">Slides</a></td>
-					<td rowspan="2"><a href="/hw3.zip">HW 3 (Coming Soon)</a></td>
+					<td rowspan="2">Continue Previous HW</td>
 					<td rowspan="2"></td>
 				</tr>
 				<tr>
@@ -63,7 +63,7 @@ import Footer from '../components/Footer.astro'
 					<td>Mar 4</td>
 					<td>Lecture 4: Modeling<br/>
 					<a href="https://docs.google.com/presentation/d/19pYxypi9JTgSFPIgBuvqlWbopyCRlTxR-qt3wIjJAYw/edit#slide=id.g33c2b5cb2c1_0_66">Slides</a></td>
-					<td rowspan="2"><a href="/hw4.zip">HW 4 (Coming Soon)</a></td>
+					<td rowspan="2"><a href="/hw3.zip">HW 3</a></td>
 					<td rowspan="2"></td>
 				</tr>
 				<tr>
