--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -70,6 +70,18 @@ import Footer from '../components/Footer.astro'
 					<td>Mar 5</td>
 					<td><a href="/lab4.ipynb">Lab Notebook</a></td>
 				</tr>
+				<tr>
+					<td rowspan="2">5</td>
+					<td>Mar 11</td>
+					<td>Lecture 5: Linear Models<br/>
+					<a href="https://docs.google.com/presentation/d/19pYxypi9JTgSFPIgBuvqlWbopyCRlTxR-qt3wIjJAYw/edit#slide=id.g33c2b5cb2c1_0_66">Slides</a></td>
+					<td rowspan="2"><a href="/hw4.zip">HW 4</a></td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Mar 12</td>
+					<td><a href="/lab5.ipynb">Lab Notebook</a></td>
+				</tr>
 			</tbody>
 		</table>
 		</center>
