--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -82,6 +82,18 @@ import Footer from '../components/Footer.astro'
 					<td>Mar 12</td>
 					<td><a href="/lab5.ipynb">Lab Notebook</a></td>
 				</tr>
+				<tr>
+					<td rowspan="2">5</td>
+					<td>Mar 18</td>
+					<td>Lecture 6: PCA and Dimensionality Reduction<br/>
+					<a href="https://docs.google.com/presentation/d/1dz-acCbMOx76Zc6o4BCO6vxQtwW3O4YcC7i9RO9aF6U/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
+					<td rowspan="2">No HW over break!</td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Mar 19</td>
+					<td>Surprise lab!</td>
+				</tr>
 			</tbody>
 		</table>
 		</center>
