--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,21 +1,27 @@
 ---
-import { getCollection } from 'astro:content';
-// 1. Generate a new path for every collection entry
-export async function getStaticPaths() {
-  const blogEntries = await getCollection('blog');
-  return blogEntries.map(entry => ({
-    params: { slug: entry.slug }, props: { entry },
-  }));
+export const prerender = false;
+
+import { getEntry, render } from "astro:content";
+
+import BlogPostLayout from "../../layouts/BlogPostLayout.astro";
+import Comments from "../../components/Comments.astro";
+
+const { slug } = Astro.params;
+
+if (!slug) {
+  return Astro.redirect("/404");
 }
-// 2. For your template, you can get the entry directly from the prop
-const { entry } = Astro.props;
-const { Content } = await entry.render();
 
-export const prerender = true;
+const post = await getEntry("blog", slug);
 
-import BlogPostLayout from '../../layouts/BlogPostLayout.astro';
+if (!post) {
+  return Astro.redirect("/404");
+}
+
+const { Content } = await render(post);
 ---
 
-<BlogPostLayout>
-<Content />
+<BlogPostLayout {...post.data}>
+  <Content />
+  <Comments postSlug={slug} />
 </BlogPostLayout>
