--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,6 +13,7 @@ import Footer from '../components/Footer.astro'
 		<p>welcome to our blog!</p>
 
         <div id="blogpage">
+			<Card title="Regularization and Sparsity" blurb="why does L1 induce sparsity?" image=url("/regularization.png") slug="blog/regularization-and-sparsity" ></Card>
             <Card title="MSE Min" blurb="why does MSE have a minimum?" image=url("/mse-min.png") slug="blog/mse-min" ></Card>
 			<Card title="Zero" blurb="a first post!" image=url("/IMG_5399.jpg") slug="blog/zero" ></Card>
         </div>
