--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -94,6 +94,19 @@ import Footer from '../components/Footer.astro'
 					<td>Mar 19</td>
 					<td>Surprise lab!</td>
 				</tr>
+				<tr>
+					<td rowspan="2">6</td>
+					<td>Apr 1</td>
+					<td>Lecture 6: Classification and Clustering<br/>
+					<a href="https://docs.google.com/presentation/d/1XSlX1y0-p0gxlFeB5g4vLkJFa2zG2Ft_g2mP7Q3rW54/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
+					<td rowspan="2">HW 5 Coming Soon!</td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Apr 2</td>
+					<td><a href="https://docs.google.com/presentation/d/1ernrdXoyXy26gsqf4qE4cknrKhsUHozWfUtvV3yO4Sg/edit?usp=sharing">Slides 2</a>
+					<a href="https://colab.research.google.com/drive/1iUE3nusp2o7INzCQmafezuRo9yWN0Gb3#scrollTo=cfMsd2AaAlmo">Modeling Template</a></td>
+				</tr>
 			</tbody>
 		</table>
 		</center>
