--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -104,7 +104,7 @@ import Footer from '../components/Footer.astro'
 				</tr>
 				<tr>
 					<td>Apr 2</td>
-					<td><a href="https://docs.google.com/presentation/d/1ernrdXoyXy26gsqf4qE4cknrKhsUHozWfUtvV3yO4Sg/edit?usp=sharing">Slides 2</a>
+					<td><a href="https://docs.google.com/presentation/d/1ernrdXoyXy26gsqf4qE4cknrKhsUHozWfUtvV3yO4Sg/edit?usp=sharing">Slides 2</a><br/>
 					<a href="https://colab.research.google.com/drive/1iUE3nusp2o7INzCQmafezuRo9yWN0Gb3#scrollTo=cfMsd2AaAlmo">Modeling Template</a></td>
 				</tr>
 			</tbody>
