--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -99,7 +99,7 @@ import Footer from '../components/Footer.astro'
 					<td>Apr 1</td>
 					<td>Lecture 6: Classification and Clustering<br/>
 					<a href="https://docs.google.com/presentation/d/1XSlX1y0-p0gxlFeB5g4vLkJFa2zG2Ft_g2mP7Q3rW54/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
-					<td rowspan="2">HW 5 Coming Soon!</td>
+					<td rowspan="2"><a href="/hw5.zip">HW 5</a></td>
 					<td rowspan="2"></td>
 				</tr>
 				<tr>
