--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -107,6 +107,31 @@ import Footer from '../components/Footer.astro'
 					<td><a href="https://docs.google.com/presentation/d/1ernrdXoyXy26gsqf4qE4cknrKhsUHozWfUtvV3yO4Sg/edit?usp=sharing">Slides 2</a><br/>
 					<a href="https://colab.research.google.com/drive/1iUE3nusp2o7INzCQmafezuRo9yWN0Gb3#scrollTo=cfMsd2AaAlmo">Modeling Template</a></td>
 				</tr>
+				<tr>
+					<td rowspan="2">7</td>
+					<td>Apr 8</td>
+					<td>Lecture 7: Classification Models<br/>
+					<a href="https://docs.google.com/presentation/d/1XSlX1y0-p0gxlFeB5g4vLkJFa2zG2Ft_g2mP7Q3rW54/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
+					<td rowspan="2"><a href="/hw5.zip">HW 5</a></td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Apr 9</td>
+					<td><a href="https://docs.google.com/presentation/d/1ernrdXoyXy26gsqf4qE4cknrKhsUHozWfUtvV3yO4Sg/edit?usp=sharing">Slides 2</a><br/>
+					<a href="https://colab.research.google.com/drive/1iUE3nusp2o7INzCQmafezuRo9yWN0Gb3#scrollTo=cfMsd2AaAlmo">Modeling Template</a></td>
+				</tr>
+				<tr>
+					<td rowspan="2">8</td>
+					<td>Apr 15</td>
+					<td>Lecture 8: Calibration<br/>
+					<a href="https://docs.google.com/presentation/d/1CZAkqTPC-b8whclZnRvneQ055xzB_2Tl8or_-TvOPw8/edit?usp=sharing">Slides</a></td>
+					<td rowspan="2"><a href="/hw6.zip">HW 6 (Coming Soon)</a></td>
+					<td rowspan="2"><a href="https://open.spotify.com/playlist/46R5pvn7QtwQUmeYOIfIpX?si=1653a8f9f63e42a3">Playlist</a></td>
+				</tr>
+				<tr>
+					<td>Apr 16</td>
+					<td><a href="https://docs.google.com/presentation/d/12w_EiijuTG0P079-OSPfvISa-xbEUEGQbMvSSJszGnM/edit?usp=sharing">Inference and Causation Slides</a><br/>
+				</tr>
 			</tbody>
 		</table>
 		</center>
