adding fun stuff

--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -39,7 +39,7 @@ import Footer from '../components/Footer.astro'
 					<a href="https://docs.google.com/presentation/d/1r3i4z0j89AYJ5_GsKUJ23xhOuMc55PT9rHvobB34JNg/edit#slide=id.g337155fa6fe_1_85">Slides</a><br/>
 					<a href="https://colab.research.google.com/drive/1syCsLziErDs8uYXHHVuu_X0dl0cCSrGq#scrollTo=iicZByLek1RM">Notebook</a></td>
 					<td rowspan="2"><a href="/hw2.zip">HW 2</a></td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Feb 19</td>
@@ -51,7 +51,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 3: EDA<br/>
 					<a href="https://docs.google.com/presentation/d/1nHzMrze5wL2ZBdEjHYKvlfUjJP0Kg38wm_lsL4DfLwE/edit#slide=id.g339b5be8024_0_0">Slides</a></td>
 					<td rowspan="2">Continue Previous HW</td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Feb 26</td>
@@ -64,7 +64,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 4: Modeling<br/>
 					<a href="https://docs.google.com/presentation/d/19pYxypi9JTgSFPIgBuvqlWbopyCRlTxR-qt3wIjJAYw/edit#slide=id.g33c2b5cb2c1_0_66">Slides</a></td>
 					<td rowspan="2"><a href="/hw3.zip">HW 3</a></td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Mar 5</td>
@@ -76,7 +76,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 5: Linear Models<br/>
 					<a href="https://docs.google.com/presentation/d/16gE8oY3EvZV4cIDFoIyxXBKIBWF8X3R7Ymb3DpDPamI/edit#slide=id.g33f0a191989_0_0">Slides</a></td>
 					<td rowspan="2"><a href="/hw4.zip">HW 4</a></td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Mar 12</td>
@@ -88,7 +88,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 6: PCA and Dimensionality Reduction<br/>
 					<a href="https://docs.google.com/presentation/d/1dz-acCbMOx76Zc6o4BCO6vxQtwW3O4YcC7i9RO9aF6U/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
 					<td rowspan="2">No new HW over break!</td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Mar 19</td>
@@ -100,7 +100,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 6: Classification and Clustering<br/>
 					<a href="https://docs.google.com/presentation/d/1XSlX1y0-p0gxlFeB5g4vLkJFa2zG2Ft_g2mP7Q3rW54/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
 					<td rowspan="2"><a href="/hw5.zip">HW 5</a></td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Apr 2</td>
@@ -113,7 +113,7 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 7: Classification Models<br/>
 					<a href="https://docs.google.com/presentation/d/1XSlX1y0-p0gxlFeB5g4vLkJFa2zG2Ft_g2mP7Q3rW54/edit#slide=id.g340bdfa67ca_0_0">Slides</a></td>
 					<td rowspan="2"><a href="/hw5.zip">HW 5</a></td>
-					<td rowspan="2"></td>
+					<td rowspan="2">👹</td>
 				</tr>
 				<tr>
 					<td>Apr 9</td>
