adding segre lecture

--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -126,7 +126,8 @@ import Footer from '../components/Footer.astro'
 					<td>Lecture 8: Calibration<br/>
 					<a href="https://docs.google.com/presentation/d/1CZAkqTPC-b8whclZnRvneQ055xzB_2Tl8or_-TvOPw8/edit?usp=sharing">Slides</a></td>
 					<td rowspan="2"><a href="/hw6.zip">HW 6 (Coming Soon)</a></td>
-					<td rowspan="2"><a href="https://open.spotify.com/playlist/46R5pvn7QtwQUmeYOIfIpX?si=1653a8f9f63e42a3">Playlist</a></td>
+					<td rowspan="2"><a href="https://open.spotify.com/playlist/46R5pvn7QtwQUmeYOIfIpX?si=1653a8f9f63e42a3">Playlist</a><br/>
+					<a href="https://physics.berkeley.edu/2023-segr%C3%A8-lecture-featuring-john-clauser">2023 Segre Lecture</a></td>
 				</tr>
 				<tr>
 					<td>Apr 16</td>
